<resources>
    <string name="app_name">Chinese Virus Tracker</string>
    <string name="track_countries">track countries</string>
    <string name="total_cases">Total Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="active">Active</string>
    <string name="global_stats">global stats</string>

    <string name="critical">Critical</string>

    <string name="cases">Cases</string>
    <string name="_0">0</string>
    <string name="today_cases">Today Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="search">Search</string>
    <string name="india">India</string>
    <string name="country_detail">Country</string>
    <string name="cases_detail">Cases</string>
    <string name="today_cases_detail">Today Cases</string>
    <string name="deaths_detail">Deaths</string>
    <string name="today_deaths_detail">Today Deaths</string>
    <string name="recovered_detail">Recovered</string>
</resources>
