<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/country_detail"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tv_country_detail"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_two"
        android:layout_marginEnd="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/cases_detail"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tv_cases_detail"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_two"
        android:layout_marginEnd="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_cases_detail"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tv_todayCases_detail"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_two"
        android:layout_marginEnd="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/deaths_detail"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tv_deaths_detail"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_two"
        android:layout_marginEnd="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/today_deaths_detail"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tv_today_deaths"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_two"
        android:layout_marginEnd="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/recovered_detail"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tv_recovered_detail"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_two"
        android:layout_marginEnd="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/active"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tv_active_detail"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_two"
        android:layout_marginEnd="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/critical"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tv_critical_detail"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="textEnd"
            android:textColor="@color/color_one"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_two"
        android:layout_marginEnd="20dp"
        />

</LinearLayout>