<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:layout_margin="15dp"
            />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical"
                    >
                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/cases"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_cases"
                        android:paddingLeft="10dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    >
                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/recovered"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:paddingStart="10dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    >
                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/death"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:paddingStart="10dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    >
                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/active"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:paddingLeft="10dp"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/cardViewGraph"
        android:layout_above="@+id/btn_track"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <com.leo.simplearcloader.SimpleArcLoader
            android:visibility="gone"
            android:id="@+id/loader"
            android:layout_centerInParent="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:arc_style="simple_arc" />

        <ScrollView
            android:id="@+id/scroll_stats"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/global_stats"
                    android:textAllCaps="true"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="25sp"
                    android:layout_marginTop="20dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/color_two"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>
            
        </ScrollView>





    </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_track"
        android:onClick="goTrackCountries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/color_one"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:text="@string/track_countries"
        />

</RelativeLayout>